Se modificaron estilos

--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
                     </div>
                     
                 </div>
-
-                <button type="submit">Crear</button>
+                <div class="text-center py-5">
+                    <button type="submit" class="btn btn-success">Crear guia</button>
+                </div>
             </div>
         </form>
     </div>
